Fixed spellbook footer alignment, group portraits, and spell assignment padding

--- a/src/less/quadrone/actors.less
+++ b/src/less/quadrone/actors.less
@@ -491,12 +491,14 @@
   }
 
   .spellbook-footer {
+    align-content: end;
     align-items: flex-start;
+    bottom: 0;
     min-height: 2.25rem;
     position: sticky;
-    bottom: 0;
 
     .sheet-footer-right {
+      align-self: flex-end;
       padding-block-start: 0.375rem;
     }
 
@@ -505,10 +507,12 @@
     }
 
     .spellcasting-class-card {
+      align-self: flex-end;
       border-radius: var(--t5e-size-1x);
       border: 0.0625rem solid var(--t5e-component-field-border);
       background: var(--t5e-component-field-background);
       padding: var(--t5e-size-2x) var(--t5e-size-3x);
+      width: 100%;
 
       .header {
         height: 1.25rem;
@@ -544,9 +548,22 @@
     &:has(.compact) {
       @container tab-content (width > 35rem) {
         >.spellcasting-cards {
-          display: grid;
-          grid-template-columns: repeat(auto-fit,
-              minmax(18rem, 1fr));
+          direction: rtl;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap-reverse;
+
+          > * {
+            width: auto;
+            direction: ltr;
+            flex: 1 1 auto;
+            min-width: 20rem;
+          }
+
+          &:has(:nth-child(2)) {
+            flex: 1;
+            max-width: 100%;
+          }
         }
       }
     }
