--- a/src/less/quadrone/group.less
+++ b/src/less/quadrone/group.less
@@ -233,7 +233,7 @@
         left: var(--inset);
         right: var(--inset);
         bottom: var(--inset);
-        border-color: var(--portrait-border-color);
+        border-color: var(--t5e-color-gold);
         border-style: solid;
         pointer-events: none;
         transition: border-color var(--t5e-transition-default), opacity var(--t5e-transition-default), filter var(--t5e-transition-default);
